--- a/Client/bithit.web/package.json
+++ b/Client/bithit.web/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.20",
     "material-icons": "^0.5.2",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
